temporarily fixed main-content left spacing on larger monitors by adding padding left

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,9 @@ body {
 }
 
 @media only screen and (min-width: 1921px) {
+  .main-content {
+    padding-left: 6rem;
+  }
   nav,
   header,
   main {
